--- a/SAMv1.tex
+++ b/SAMv1.tex
@@ -12,7 +12,7 @@
 
 \makeindex
 
-\title{The SAM Format Specification (v1.4-r955)}
+\title{The SAM Format Specification (v1.4-r956)}
 \author{The SAM Format Specification Working Group}
 \begin{document}
 
@@ -192,29 +192,31 @@ fields in the SAM format:
 \end{center}
 
 \begin{enumerate}
-\item {\sf QNAME}: Query template NAME. Each template has a unique name.
+\item {\sf QNAME}: Query template NAME. Reads/fragments having identical {\sf QNAME} are regarded to come from the same
+	template\footnote{To save disk space, one may use the same {\sf QNAME} for all reads. However, in this case
+	all reads will be considered to come from a single template, which leads to loss of information and may
+	cause problems to other utilities.}.
 \item {\sf FLAG}: bitwise FLAG. Each bit is explained in the following
-  table (`*' means no bits are set):
+  table:
   \begin{center}\small
-  \begin{tabular}{rcl}
+  \begin{tabular}{rl}
   \hline
-  Bit & Chr\footnotemark[1] & Description\\
+  Bit & Description\\
   \hline
-  0x1 &  p&template having multiple fragments in sequencing \\
-  0x2 &  P&each fragment properly aligned according to the aligner \\
-  0x4 &  u&fragment unmapped \\
-  0x8 &  U&next fragment in the template unmapped \\
-  0x10 & r& {\sf SEQ} being reverse complemented \\
-  0x20 & R& {\sf SEQ} of the next fragment in the template being reversed \\
-  0x40 & 1& the first fragment in the template \\
-  0x80 & 2& the last fragment in the template \\
-  0x100 &s&  secondary alignment\\
-  0x200 &f&  not passing quality controls \\
-  0x400 &d&  PCR or optical duplicate \\
+  0x1 &  template having multiple fragments in sequencing \\
+  0x2 &  each fragment properly aligned according to the aligner \\
+  0x4 &  fragment unmapped \\
+  0x8 &  next fragment in the template unmapped \\
+  0x10 &  {\sf SEQ} being reverse complemented \\
+  0x20 &  {\sf SEQ} of the next fragment in the template being reversed \\
+  0x40 &  the first fragment in the template \\
+  0x80 &  the last fragment in the template \\
+  0x100 &  secondary alignment\\
+  0x200 &  not passing quality controls \\
+  0x400 &  PCR or optical duplicate \\
   \hline
   \end{tabular}
   \end{center}
-  \footnotetext[1]{For human readability, some programs may use a string to represent {\sf FLAG}, but this is not formally defined in the SAM spec.}
   \begin{itemize}
   \item Bit 0x4 is the only reliable place to tell whether the fragment
     is unmapped. If 0x4 is set, no assumptions can be made about {\sf
