fixed an error raised by Ashish Agarwal

--- a/SAMv1.tex
+++ b/SAMv1.tex
@@ -96,7 +96,7 @@ and except the {\tt @CO} lines, each data field follows a format `{\tt TAG:VALUE
 is a two-letter string that defines the content and the format of {\tt
   VALUE}. Each header line should match: {\tt
   /\char94@[A-Za-z][A-Za-z](\char92t[A-Za-z][A-Za-z0-9]:[
-  -\char126])+\$/} or {\tt /\char94@CO\char92t.*/}. Tags containing lowercase letters are reserved for
+  -\char126]+)+\$/} or {\tt /\char94@CO\char92t.*/}. Tags containing lowercase letters are reserved for
 end users.
 
 The following table give the defined record types and tags. Tags with
