--- a/SAMv1.tex
+++ b/SAMv1.tex
@@ -12,7 +12,7 @@
 
 \makeindex
 
-\title{The SAM Format Specification (v1.4-r985)}
+\title{The SAM Format Specification (v1.4-r987)}
 \author{The SAM Format Specification Working Group}
 \begin{document}
 
@@ -28,7 +28,7 @@ not. Each alignment line has 11 mandatory fields for essential alignment
 information such as mapping position, and variable number of optional
 fields for flexible or aligner specific information.
 
-\subsection{An example}
+\subsection{An example}\label{sec:example}
 Suppose we have the following alignment with bases in lower cases
 clipped from the alignment. Read {\tt r001/1} and {\tt r001/2}
 constitute a read pair; {\tt r003} is a chimeric read; {\tt r004}
@@ -54,9 +54,9 @@ The corresponding SAM format is:
 @SQ SN:ref LN:45
 r001 163 ref  7 30 8M2I4M1D3M = 37  39 TTAGATAAAGGATACTG *
 r002   0 ref  9 30 3S6M1P1I4M *  0   0 AAAAGATAAGGATA    *
-r003   0 ref  9 30 5H6M       *  0   0 AGCTAA   *   NM:i:1
+r003   0 ref  9 30 5H6M       *  0   0 AGCTAA            *   NM:i:1
 r004   0 ref 16 30 6M14N5M    *  0   0 ATAGCTTCAGC       *
-r003  16 ref 29 30 6H5M       *  0   0 TAGGC    *   NM:i:0
+r003  16 ref 29 30 6H5M       *  0   0 TAGGC             *   NM:i:0
 r001  83 ref 37 30 9M         =  7 -39 CAGCGCCAT         *
 \end{verbatim}
 \end{framed}
@@ -454,6 +454,79 @@ specific software package for it to function properly.
   \item The {\tt NM} tag should be present.
   \end{enumerate}
 \end{enumerate}
+
+\pagebreak
+
+\section{Guide for Describing Assembly Sequences in SAM}
+
+\subsection{Unpadded versus padded representation}
+
+To describe alignments, we can regard the reference sequence with no respect to
+alignments against it.  Such a reference sequence is called an \emph{unpadded
+reference}. A position on an unpadded reference, referred to as an
+\emph{unpadded position}, is not affected alignments at all. When we use
+unpadded references and positions to describe alignments, we say we are using
+the \emph{unpadded representation}.
+
+Alternatively, to describe the same alignments, we can regard the reference
+sequence to contain pads that make room for sequences inserted to the
+reference. A pad is effectively a gap and conventionally represented by an
+asterisk `*'.  A reference sequence containing pads is called a \emph{padded
+reference}. A position which counts the *'s is referred to as a \emph{padded
+position}. A padded reference sequence may be affected by the query alignments
+and longer than the unpadded reference.  The padded position of one query
+alignment may be affected by other query alignments ahead.
+
+Unpadded and padded are different representations of the same alignments. They
+are convertible to each other with no loss of any information. The unpadded
+representation is more common due to the convenience of a fixed coordinate system,
+while the padded representation has the advantage that alignments can be simply
+described by the start and end coordinates without using complex CIGAR strings.
+We traditionally use the padded representation for {\it de novo} assembly. The ACE
+assembly format uses the padded representation exclusively.
+
+\subsection{Padded SAM}
+
+The SAM format is typically used to describe alignments against an unpadded
+reference sequence, but it is also able to describe alignments against a padded
+reference. In the latter case, we say we are using a \emph{padded SAM}. A padded
+SAM is a valid SAM, but with the difference that the reference and positions in
+use are padded. There may be more than one ways to describe the padded
+representation. We recommend the following.
+
+In a padded SAM, alignments and coordinates are described with respect to the
+padded reference sequence. Different from the traditional padded representation
+where we also put *'s in the query sequences, we do not write *'s in the {\sf
+SEQ} field of the SAM format\footnote{Writing *'s in the {\sf SEQ} field is
+frequently more convenient, but it causes concerns of backward compatibility.}. Instead,
+we describe pads in the query sequences as deletions from the padded reference
+using {\sf CIGAR}. In a padded SAM, the insertion and padding CIGAR operations
+(`{\tt I}' and `{\tt P}') are not used because the padded reference already
+considers all the insertions.
+
+The following shows the padded SAM for the example alignment in Section~\ref{sec:example}.
+Notably, the length of {\tt ref} is 47 instead of 45. {\sf POS} of the last
+three alignments are all shifted by 2. {\sf CIGAR} of alignments bridging the
+2bp insertion are also changed.
+
+\begin{framed}\small
+\begin{verbatim}
+@HD VN:1.3 SO:coordinate
+@SQ SN:ref LN:47
+ref  516 ref  1  0 14M2D31M   *  0   0 AGCATGTTAGATAAGATAGCTGTGCTAGTAGGCAGTCAGCGCCAT *
+r001 163 ref  7 30 12M1D3M    = 39  41 TTAGATAAAGGATACTG *
+r002   0 ref  9 30 3S6M1D5M   *  0   0 AAAAGATAAGGATA    *
+r003   0 ref  9 30 5H6M       *  0   0 AGCTAA            *   NM:i:1
+r004   0 ref 18 30 6M14N5M    *  0   0 ATAGCTTCAGC       *
+r003  16 ref 31 30 6H5M       *  0   0 TAGGC             *   NM:i:0
+r001  83 ref 39 30 9M         =  7 -41 CAGCGCCAT         *
+\end{verbatim}
+\end{framed}
+
+Here we also exemplify the recommended practice for storing the reference
+sequence in SAM when users feel this is convenient. For a reference sequence
+in SAM, {\sf QNAME} should be identical to {\sf RNAME}, {\sf POS} be set to 1 and
+{\sf FLAG} set to 516 (filtered and unmapped).
 
 \pagebreak
 
