--- a/SAMv1.tex
+++ b/SAMv1.tex
@@ -119,9 +119,9 @@ The following table give the defined record types and tags. Tags with
   & {\tt SN}* & Reference sequence name. Each {\tt @SQ} line must have a unique {\tt SN} tag. The value of this
   field is used in the
   alignment records in RNAME and PNEXT fields. Regular expression: {\tt [!-)+-\char60\char62-\char126][!-\char126]*}\\\cline{2-3}
-  & {\tt LN}* & Reference sequence length. \emph{Range}: {\tt [1,2$^{29}$-1]}\\\cline{2-3}
+  & {\tt LN}* & Reference sequence length. \emph{Range}: {\tt [1,2$^{31}$-1]}\\\cline{2-3}
   & {\tt AS} & Genome assembly identifier. \\\cline{2-3}
-  & {\tt M5} & MD5 checksum of the sequence in the uppercase, with gaps and spaces removed.\\\cline{2-3}
+  & {\tt M5} & MD5 checksum of the sequence in the uppercase, excluding spaces but including pads (as `*'s).\\\cline{2-3}
   & {\tt SP} & Species.\\\cline{2-3}
   & {\tt UR} & URI of the sequence.  This value may start with one of the standard
   protocols, e.g http: or ftp:.  If it does not start with one of these protocols, it is assumed to be a file-system path.\\\cline{1-3}\pagebreak\cline{1-3}
@@ -179,7 +179,7 @@ fields in the SAM format:
   1 & {\sf QNAME} & String & {\tt [!-?A-\char126]\{1,255\}} & Query template NAME\\
   2 & {\sf FLAG} & Int & {\tt [0,2$^{16}$-1]} & bitwise FLAG \\
   3 & {\sf RNAME} & String & {\tt \char92*|[!-()+-\char60\char62-\char126][!-\char126]*} & Reference sequence NAME\\
-  4 & {\sf POS} & Int & {\tt [0,2$^{29}$-1]} & 1-based leftmost mapping POSition \\
+  4 & {\sf POS} & Int & {\tt [0,2$^{31}$-1]} & 1-based leftmost mapping POSition \\
   5 & {\sf MAPQ} & Int & {\tt [0,2$^8$-1]} & MAPping Quality \\
   6 & {\sf CIGAR} & String & {\tt \char92*|([0-9]+[MIDNSHPX=])+} & CIGAR string \\
   7 & {\sf RNEXT} & String & {\tt \char92*|=|[!-()+-\char60\char62-\char126][!-\char126]*} & Ref. name of the mate/next segment\\
@@ -474,8 +474,9 @@ reference. A pad is effectively a gap and conventionally represented by an
 asterisk `*'.  A reference sequence containing pads is called a \emph{padded
 reference}. A position which counts the *'s is referred to as a \emph{padded
 position}. A padded reference sequence may be affected by the query alignments
-and longer than the unpadded reference.  The padded position of one query
-alignment may be affected by other query alignments ahead.
+and because of gap insertions is typically longer than the unpadded reference.
+The padded position of one query alignment may be affected by other query
+alignments ahead.
 
 Unpadded and padded are different representations of the same alignments. They
 are convertible to each other with no loss of any information. The unpadded
@@ -695,8 +696,10 @@ falls outside the required region. This strategy saves half of the seek
 calls in average.
 
 In BAM, each bin may span $2^{29}$, $2^{26}$, $2^{23}$, $2^{20}$,
-$2^{17}$ or $2^{14}$ bp. Bin 0 spans a 512Mbp region, bins 1--8 span
-64Mbp, 9--72 8Mbp, 73--584 1Mbp, 585--4680 128Kbp and bins 4681--37449
+$2^{17}$ or $2^{14}$ bp\footnote{Due to a limitation in the current indexing
+scheme, a chromosome sequence longer than $2^{29}-1$ is not supported during
+indexing.}. Bin 0 spans a 512Mbp region, bins 1--8 span 64Mbp, 9--72 8Mbp,
+73--584 1Mbp, 585--4680 128Kbp and bins 4681--37449
 span 16Kbp regions.
 
 \subsubsection{Reducing small chunks}
