--- a/SAMv1.tex
+++ b/SAMv1.tex
@@ -359,6 +359,7 @@ may be changed if the new type is also compatible with the array.
   At the $i$-th read base, ${\rm BAQ}_i=Q_i-({\rm BQ}_i-64)$ where $Q_i$ is the $i$-th base quality. \\
   {\tt CC} & Z & Reference name of the next hit; "=" for the same chromosome \\
   {\tt CM} & i & Edit distance between the color sequence and the color reference (see also {\tt NM})\\
+  {\tt CO} & Z & Free-text comments \\
   {\tt CP} & i & Leftmost coordinate of the next hit \\ 
   {\tt CQ} & Z & Color read quality on the original strand of the read. Same encoding as {\sf QUAL}; same length as {\tt CS}.\\
   {\tt CS} & Z & Color read sequence on the original strand of the read. The primer base must be included.\\
@@ -381,10 +382,12 @@ may be changed if the new type is also compatible with the array.
   {\tt OC} & Z & Original CIGAR (usually before realignment) \\
   {\tt PG} & Z & Program. Value matches the header {\tt PG-ID} tag if {\tt @PG} is present. \\
   {\tt PQ} & i & Phred likelihood of the template, conditional on both the mapping being correct \\
+  {\tt PT} & Z & Read annotations of the padded read sequence\footnotemark[3]\\
   {\tt PU} & Z & Platform unit. Value to be consistent with the header {\tt RG-PU} tag if {\tt @RG} is present.\\
   {\tt Q2} & Z & Phred quality of the mate/next segment. Same encoding as {\sf QUAL}.\\
   {\tt R2} & Z & Sequence of the mate/next segment in the template. \\
   {\tt RG} & Z & Read group. Value matches the header {\tt RG-ID} tag if {\tt @RG} is present in the header. \\
+  {\tt RT} & Z & Read annotations of the unpadded read sequence\footnotemark[3]\\
   {\tt SM} & i & Template-independent mapping quality \\
   {\tt TC} & i & The number of segments in the template.\\
   {\tt U2} & Z & Phred probility of the 2nd call being wrong conditional on the best being wrong. The same encoding as {\sf QUAL}. \\
@@ -402,6 +405,13 @@ may be changed if the new type is also compatible with the array.
   deletion from the reference; the deleted sequence is AC; the last 6
   bases are matches. The {\tt MD} field ought to match the {\sf CIGAR}
   string.}
+\footnotetext[3]{The value of the {\tt PT} tag takes the format of ``{\tt
+(start|end|strand|key|freetext)(|start|end|strand|key|freetext)*}'', where {\tt
+start} and {\tt end} are \emph{padded} 1-based positions, {\tt strand} is either `+'
+or `-', and {\tt key} and {\tt freetext} contain only printable characters 
+(according to C's {\tt isprint()} marcro) with the separator `{\tt |}' and
+potentially other control characters in the URL percent encoding. Tag {\tt RT}
+is in the same format except that {\tt start} and {\tt end} are \emph{unpadded} positions.}
 
 \pagebreak
 
@@ -476,7 +486,7 @@ reference}. A position which counts the *'s is referred to as a \emph{padded
 position}. A padded reference sequence may be affected by the query alignments
 and because of gap insertions is typically longer than the unpadded reference.
 The padded position of one query alignment may be affected by other query
-alignments ahead.
+alignments.
 
 Unpadded and padded are different representations of the same alignments. They
 are convertible to each other with no loss of any information. The unpadded
@@ -516,6 +526,7 @@ three alignments are all shifted by 2. {\sf CIGAR} of alignments bridging the
 @SQ SN:ref LN:47
 ref  516 ref  1  0 14M2D31M   *  0   0 AGCATGTTAGATAAGATAGCTGTGCTAGTAGGCAGTCAGCGCCAT *
 r001 163 ref  7 30 12M1D3M    = 39  41 TTAGATAAAGGATACTG *
+*    768 ref  8 30 1M         *  0   0 *                 *   CO:Z:a wrong consensus base
 r002   0 ref  9 30 3S6M1D5M   *  0   0 AAAAGATAAGGATA    *
 r003   0 ref  9 30 5H6M       *  0   0 AGCTAA            *   NM:i:1
 r004   0 ref 18 30 6M14N5M    *  0   0 ATAGCTTCAGC       *
@@ -525,9 +536,11 @@ r001  83 ref 39 30 9M         =  7 -41 CAGCGCCAT         *
 \end{framed}
 
 Here we also exemplify the recommended practice for storing the reference
-sequence in SAM when users feel this is convenient. For a reference sequence
-in SAM, {\sf QNAME} should be identical to {\sf RNAME}, {\sf POS} be set to 1 and
-{\sf FLAG} set to 516 (filtered and unmapped).
+sequence and the reference annotations in SAM when necessary. For a reference
+sequence in SAM, {\sf QNAME} should be identical to {\sf RNAME}, {\sf POS} set
+to 1 and {\sf FLAG} to 516 (filtered and unmapped); for an annotation, {\sf
+FLAG} should be set to 768 (filtered and secondary) with no restriction to {\sf
+QNAME}.
 
 \pagebreak
 
