--- a/SAMv1.tex
+++ b/SAMv1.tex
@@ -12,7 +12,7 @@
 
 \makeindex
 
-\title{The SAM Format Specification (v1.4-r987)}
+\title{The SAM Format Specification (v1.4-r993)}
 \author{The SAM Format Specification Working Group}
 \begin{document}
 
@@ -527,7 +527,7 @@ three alignments are all shifted by 2. {\sf CIGAR} of alignments bridging the
 ref  516 ref  1  0 14M2D31M   *  0   0 AGCATGTTAGATAAGATAGCTGTGCTAGTAGGCAGTCAGCGCCAT *
 r001 163 ref  7 30 12M1D3M    = 39  41 TTAGATAAAGGATACTG *
 *    768 ref  8 30 1M         *  0   0 *                 *   CO:Z:a wrong consensus base
-r002   0 ref  9 30 3S6M1D5M   *  0   0 AAAAGATAAGGATA    *
+r002   0 ref  9 30 3S6M1D5M   *  0   0 AAAAGATAAGGATA    *   PT:Z:1|4|comment|homopolymer
 r003   0 ref  9 30 5H6M       *  0   0 AGCTAA            *   NM:i:1
 r004   0 ref 18 30 6M14N5M    *  0   0 ATAGCTTCAGC       *
 r003  16 ref 31 30 6H5M       *  0   0 TAGGC             *   NM:i:0
