--- a/SAMv1.tex
+++ b/SAMv1.tex
@@ -12,7 +12,7 @@
 
 \makeindex
 
-\title{The SAM Format Specification (v1.4-r993)}
+\title{The SAM Format Specification (v1.4-r994)}
 \author{The SAM Format Specification Working Group}
 \begin{document}
 
@@ -407,8 +407,10 @@ may be changed if the new type is also compatible with the array.
   string.}
 \footnotetext[3]{The value of the {\tt PT} tag takes the format of ``{\tt
 (start|end|strand|key|freetext)(|start|end|strand|key|freetext)*}'', where {\tt
-start} and {\tt end} are \emph{padded} 1-based positions, {\tt strand} is either `+'
-or `-', and {\tt key} and {\tt freetext} contain only printable characters 
+start} and {\tt end} are \emph{padded} 1-based positions, {\tt strand} indicates the orientation of the annotation
+w.r.t. the read (`{\tt +}' for forward strand, `{\tt -}' for reverse
+complement, `{\tt .}' for not stranded or `{\tt ?}' for stranded but strand
+unknown), and {\tt key} and {\tt freetext} contain only printable characters
 (according to C's {\tt isprint()} marcro) with the separator `{\tt |}' and
 potentially other control characters in the URL percent encoding. Tag {\tt RT}
 is in the same format except that {\tt start} and {\tt end} are \emph{unpadded} positions.}
@@ -525,12 +527,12 @@ three alignments are all shifted by 2. {\sf CIGAR} of alignments bridging the
 @HD VN:1.3 SO:coordinate
 @SQ SN:ref LN:47
 ref  516 ref  1  0 14M2D31M   *  0   0 AGCATGTTAGATAAGATAGCTGTGCTAGTAGGCAGTCAGCGCCAT *
-r001 163 ref  7 30 12M1D3M    = 39  41 TTAGATAAAGGATACTG *
-*    768 ref  8 30 1M         *  0   0 *                 *   CO:Z:a wrong consensus base
-r002   0 ref  9 30 3S6M1D5M   *  0   0 AAAAGATAAGGATA    *   PT:Z:1|4|comment|homopolymer
-r003   0 ref  9 30 5H6M       *  0   0 AGCTAA            *   NM:i:1
+r001 163 ref  7 30 14M1D3M    = 39  41 TTAGATAAAGGATACTG *
+*    768 ref  8 30 1M         *  0   0 *                 *  CO:Z:a wrong consensus base
+r002   0 ref  9 30 3S6M1D5M   *  0   0 AAAAGATAAGGATA    *  PT:Z:1|4|+|comment|homopolymer
+r003   0 ref  9 30 5H6M       *  0   0 AGCTAA            *  NM:i:1
 r004   0 ref 18 30 6M14N5M    *  0   0 ATAGCTTCAGC       *
-r003  16 ref 31 30 6H5M       *  0   0 TAGGC             *   NM:i:0
+r003  16 ref 31 30 6H5M       *  0   0 TAGGC             *  NM:i:0
 r001  83 ref 39 30 9M         =  7 -41 CAGCGCCAT         *
 \end{verbatim}
 \end{framed}
